Opened 14 years ago
Closed 14 years ago
#1576 closed defect (fixed)
Remuxing mov with timecode and 29.97 FPS fails
| Reported by: | rmk | Owned by: | Clément Bœsch |
|---|---|---|---|
| Priority: | important | Component: | undetermined |
| Version: | git-master | Keywords: | mov regression timecode |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
I have two cases of 29.97 FPS files generated with Final Cut Pro 7 with timecode which fail when attempting to remux them with error: Timecode frame rate not supported
Command line and output:
ffmpeg -i ~/sample-db/fcp7/xdcam_ex/fcp7_xdcam_ex_1080\@30p_2s.mov -vcodec copy -acodec copy remuxed.mov
ffmpeg version N-42906-g506ffa7 Copyright (c) 2000-2012 the FFmpeg developers
built on Jul 26 2012 17:20:09 with gcc 4.2.1 (GCC) (Apple Inc. build 5664)
configuration:
libavutil 51. 65.100 / 51. 65.100
libavcodec 54. 44.101 / 54. 44.101
libavformat 54. 20.100 / 54. 20.100
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 3.100 / 3. 3.100
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 15.100 / 0. 15.100
Guessed Channel Layout for Input Stream #0.1 : stereo
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '/Users/krueger/sample-db/fcp7/xdcam_ex/fcp7_xdcam_ex_1080@30p_2s.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 2012-05-24 12:47:05
Duration: 00:00:02.00, start: 0.000000, bitrate: 29627 kb/s
Stream #0:0(eng): Video: mpeg2video (Main) (xdvf / 0x66766478), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 35000 kb/s, 29.97 fps, 29.97 tbr, 2997 tbn, 59.94 tbc
Metadata:
creation_time : 2012-05-24 12:47:05
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, s16, 1536 kb/s
Metadata:
creation_time : 2012-05-24 12:47:05
handler_name : Apple Alias Data Handler
Stream #0:2(eng): Data: none (tmcd / 0x64636D74)
Metadata:
creation_time : 2012-05-24 12:47:18
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
[mov @ 0x10106f600] Timecode frame rate not supported
Output #0, mov, to 'remuxed.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
encoder : Lavf54.20.100
Stream #0:0(eng): Video: mpeg2video (xdvf / 0x66766478), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 35000 kb/s, 29.97 fps, 2997 tbn, 2997 tbc
Metadata:
creation_time : 2012-05-24 12:47:05
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, 1536 kb/s
Metadata:
creation_time : 2012-05-24 12:47:05
handler_name : Apple Alias Data Handler
Stream mapping:
Stream #0:0 -> #0:0 (copy)
Stream #0:1 -> #0:1 (copy)
Could not write header for output file #0 (incorrect codec parameters ?): Operation not permitted
Change History (4)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
| Description: | modified (diff) |
|---|---|
| Keywords: | mov regression added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
Sample uploaded to samples/ffmpeg-bugs/trac/ticket1576, regression since 1ec23d9.
$ ffmpeg -i mov-remux-2997-with-timestamp-fails.mov -acodec copy -vcodec copy out.mov
ffmpeg version N-43027-g981d97f Copyright (c) 2000-2012 the FFmpeg developers
built on Jul 30 2012 08:29:03 with gcc 4.3.2 (GCC)
configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --enable-gpl --enable-libopenjpeg --enable-libvorbis --enable-libspeex --enable-libmp3lame --enable-libtheora --extra-ldflags=-lm --enable-libvpx --enable-libxavs --enable-x11grab --enable-libass --enable-nonfree --enable-libfaac --enable-libopus
libavutil 51. 65.100 / 51. 65.100
libavcodec 54. 45.100 / 54. 45.100
libavformat 54. 21.100 / 54. 21.100
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 5.100 / 3. 5.100
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 15.100 / 0. 15.100
libpostproc 52. 0.100 / 52. 0.100
Guessed Channel Layout for Input Stream #0.1 : stereo
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'mov-remux-2997-with-timestamp-fails.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 1942-04-19 06:18:49
Duration: 00:00:02.00, start: 0.000000, bitrate: 29627 kb/s
Stream #0:0(eng): Video: mpeg2video (Main) (xdvf / 0x66766478), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 35000 kb/s, 29.97 fps, 29.97 tbr, 2997 tbn, 59.94 tbc
Metadata:
creation_time : 1942-04-19 06:18:49
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, s16, 1536 kb/s
Metadata:
creation_time : 1942-04-19 06:18:49
handler_name : Apple Alias Data Handler
Stream #0:2(eng): Data: none (tmcd / 0x64636D74)
Metadata:
creation_time : 1942-04-19 06:19:02
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
[mov @ 0x90b5bc0] Timecode frame rate not supported
Output #0, mov, to 'out.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
encoder : Lavf54.21.100
Stream #0:0(eng): Video: mpeg2video (xdvf / 0x66766478), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 35000 kb/s, 29.97 fps, 2997 tbn, 2997 tbc
Metadata:
creation_time : 1942-04-19 06:18:49
handler_name : Apple Alias Data Handler
timecode : 01:00:00:00
Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, 1536 kb/s
Metadata:
creation_time : 1942-04-19 06:18:49
handler_name : Apple Alias Data Handler
Stream mapping:
Stream #0:0 -> #0:0 (copy)
Stream #0:1 -> #0:1 (copy)
Could not write header for output file #0 (incorrect codec parameters ?): Operation not permitted
comment:3 by , 14 years ago
| Keywords: | timecode added |
|---|---|
| Owner: | set to |
I will submit a patch to ignore timecode errors; it's too much trouble when a bad couple timecode+rate is extracted. It's possible there is another issue here too; I'll look into this. Thanks for the report.
Note:
See TracTickets
for help on using tickets.



Uploaded file to incoming/mov-remux-2997-with-timestamp-fails.mov