lavf/movenc: add frame rate heuristic for timecode frame rate.

Fixes ticket 1576.